welcome.lessons.welcome.methods.picture.PatternPicture.scala.error
PatternPicture:5: error: too many arguments for method getCouleurBrosse: ()java.awt.Color
  getCouleurBrosse(c)
                  ^PatternPicture:8: error: not found: value levebrosse
  levebrosse()
  ^