welcome.lessons.welcome.methods.picture.PatternPicture.scala.code
override def run() {
  pmotif(Color.red)
}
def pmotif(c:Color){
  getCouleurBrosse(c)
  avance()
  baisseBrosse()
  levebrosse()
  gauche()
  avance()
  gauche()
}
